# VideoCall

./: .gitignore  Makefile  README.md  dff  directory_tree.txt  dump_dir__tree.py  gstreamer_test  gstreamer_test.cpp  img_show  opencv_video  opencv_video.cpp  udp_recv.cpp  udp_send.cpp
Demo/: img_show  opencv_video
Demo/Framework/: CMakeLists.txt  abstract_command.h  abstract_login_state.h  abstract_session.h  abstract_state.h  all_code.txt  collect_code.py  core.h  event_bus.h  event_router.h  log.h  logged_in_state.h  login_command.h  login_event.h  login_receiver.h  login_session.h  main.cpp  session_manager.h
Demo/Framework/src/adapter/: qt_ui.h
Demo/Framework/src/application/: app_context.h
Demo/Framework/src/business/login/: logged_in_state.h  logged_out_state.h  logging_in_state.h  login_command.h  login_event.h  login_failed_event.h  login_receiver.h  login_session.h  login_success_event.h
Demo/Framework/src/business/login/command/: login_command.h
Demo/Framework/src/business/login/event/: login_event.h  login_failed_event.h
Demo/Framework/src/business/login/state/: logged_out_state.h  logging_in_state.h
Demo/Framework/src/framework/command/: abstract_command_dispatcher.h  command_context.h
Demo/Framework/src/framework/core/: core.h
Demo/Framework/src/framework/event/: abstract_event.h  abstract_event_listener.h  event_bus.h  event_router.h
Demo/Framework/src/framework/session/: abstract_session.h
Demo/Framework/src/service/: abstract_ui.h
Demo/Framework/src/utilities/: blocking_queue.h  log.h
QT_Prj/VideoCall/: CMakeLists.txt  all_code.txt  collect_code.py  directory_tree.txt  main.cpp
QT_Prj/VideoCall/Test/Websocket_Test/: websocket_test.cpp
QT_Prj/VideoCall/src/adapter/: qt_ui.cpp  qt_ui.h  qt_ui.ui  websocket.cpp  websocket.h
QT_Prj/VideoCall/src/business/call/command/: call_built_command.h  call_command.h  call_send_command.h
QT_Prj/VideoCall/src/business/call/event/: call_event.h  call_failed_event.h  call_send_event.h  call_success_event.h
QT_Prj/VideoCall/src/business/call/model/: call_payload.h  send_payload.h
QT_Prj/VideoCall/src/business/call/receiver/: call_built_receiver.h  call_receiver.h  call_send_receiver.h
QT_Prj/VideoCall/src/business/call/session/: call_session.h
QT_Prj/VideoCall/src/business/call/state/: call_built_state.h  call_idle_state.h  calling_state.h
QT_Prj/VideoCall/src/business/connect/command/: connect_command.h  connected_command.h
QT_Prj/VideoCall/src/business/connect/event/: connect_failed_event.h  connect_server_event.h  connect_success_event.h
QT_Prj/VideoCall/src/business/connect/model/: connect_payload.h
QT_Prj/VideoCall/src/business/connect/receiver/: connect_receiver.h  connected_receiver.h
QT_Prj/VideoCall/src/business/connect/session/: connect_session.h
QT_Prj/VideoCall/src/business/connect/state/: connected_state.h  connecting_state.h  disconnected_state.h
QT_Prj/VideoCall/src/business/login/: login_payload.h  login_session.h
QT_Prj/VideoCall/src/business/login/command/: login_command.h
QT_Prj/VideoCall/src/business/login/event/: login_success_event.h
QT_Prj/VideoCall/src/business/login/receiver/: login_receiver.h
QT_Prj/VideoCall/src/framework/command/: abstract_command.h  abstract_receiver.h
QT_Prj/VideoCall/src/framework/core/: core.h
QT_Prj/VideoCall/src/framework/event/: abstract_event_listener.h
QT_Prj/VideoCall/src/framework/session/: session_manager.h
QT_Prj/VideoCall/src/framework/state/: abstract_call_state.h  abstract_connect_state.h  abstract_state.h
QT_Prj/VideoCall/src/service/: abstract_net.h  abstract_ui.h
QT_Prj/VideoCall/src/utilities/: log.h
QT_Prj/qt_gst_26_1_1/: .gitignore  AppWindow.cpp  CMakeLists.txt  CameraManager.cpp  ClientEventFactory.cpp  ClientLoginProtocol.cpp  CommandSocket.cpp  CommandSocket.h  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  PacketCodec.h  QtCameraAdapter.cpp  QtCameraAdapter.h  VideoWidget.h  all_code.txt  collect_code.py  main.cpp  protocol_test.cpp  protocol_text.h  widget.cpp  widget.h  widget.ui
QT_Prj/qt_gst_26_1_1/app/: ClientEvent.h  ClientEventEnum.h  ClientEventFactory.cpp  ClientEventFactory.h  ClientLoginProtocol.cpp  ClientLoginProtocol.h
QT_Prj/qt_gst_26_1_1/core/: CallManager.cpp  CallManager.h  CallSession.h  ClientCore.cpp  ClientCore.h  ClientState.h  CoreExecutor.cpp  CoreExecutor.h  CoreInput.h  CoreOutput.h  FSM.cpp  FSM.h  ICoreListener.h
QT_Prj/qt_gst_26_1_1/media/: CameraManager.cpp  CameraManager.h  Frame.h  VideoReceiver.cpp  VideoReceiver.h
QT_Prj/qt_gst_26_1_1/net/: CommandSocket.cpp  CommandSocket.h  PacketCodec.h
QT_Prj/qt_gst_26_1_1/protocol/: protocol_common.h  protocol_text.cpp  protocol_text.h  protocol_types.h
QT_Prj/qt_gst_26_1_1/ui/: AppWindow.cpp  AppWindow.h  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  QtCameraAdapter.cpp  QtCameraAdapter.h  VideoWidget.cpp  VideoWidget.h  widget.cpp  widget.h  widget.ui
QT_Prj/qt_gst_26_1_1/util/: GetLocalIP.h  PortUtils.cpp  PortUtils.h
QT_Prj/webrtc_26_3_3/webrtc/: CMakeLists.txt  all_code.txt  main.cpp
QT_Prj/webrtc_26_3_3/webrtc/src/core/: ConnectEvent.h  IEventData.h  IEventQueue.h  core.h
QT_Prj/webrtc_26_3_3/webrtc/src/net/: INet.h  Websocket.cpp  Websocket.h
QT_Prj/webrtc_26_3_3/webrtc/src/ui/: IUI.h  widget.cpp  widget.h  widget.ui
Server/: CMakeLists.txt  CommandSocket.cpp  CommandSocket.h  LoginServer.cpp  LoginServer.h  ThreadPool.cpp  ThreadPool.h  all_code.txt  server_main.cpp
Server/core/: LoginServer.cpp  LoginServer.h
Server/dispatcher/: ServerEventDispatcher.cpp  ServerEventDispatcher.h
Server/domain/: User.h
Server/event/: ServerEvent.h  ServerEventFactory.cpp  ServerEventFactory.h  ServerEvents.h
Server/net/: CommandSocket.cpp  CommandSocket.h
Server/protocol/: LoginProtocol.cpp  LoginProtocol.h  protocol_common.h  protocol_text.cpp  protocol_text.h  protocol_types.h
Server/service/: CallService.cpp  CallService.h  LoginService.cpp  LoginService.h  ServerAction.h  ServerActions.h
Server/session/: SessionManager.cpp  SessionManager.h
Server/util/: ThreadPool.cpp
(+80 files in other folders)
